# ocr-script-freshness-model

./: .dockerignore  .gitignore  Dockerfile  OCRscript.py  README.md  app.py  documentOCR.py  documentation.md  home.py  index.html  pyproject.toml  requirements.txt
