[tool.poetry]
name = "ocr-script-freshness-model"
version = "0.1.0"
description = ""
authors = ["somilgupta <somil2760@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.24.11"
flask = "^3.0.3"
flask-cors = "^5.0.0"
pillow = "^11.0.0"
werkzeug = "^3.0.4"
azure-core = "^1.31.0"
opencv-python = "^4.10.0.84"
azure-ai-vision-imageanalysis = "^1.0.0"
transformers = "^4.45.2"
numpy = "<2.0"
paddleocr = "^2.9.0"
fuzzywuzzy = "^0.18.0"
easyocr = "^1.7.2"
dateparser = "^1.2.0"
paddlepaddle = "2.6.0"
python-levenshtein = "^0.26.0"
albumentations = "^1.4.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
