[tool.poetry]
name = "ocr-script-freshness-model"
version = "0.1.0"
description = ""
authors = ["sendittokrishnaa@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-cors = "^5.0.0"
pillow = "^11.0.0"
werkzeug = "^3.0.4"
opencv-python = "^4.10.0.84"
opencv-contrib-python = "^4.10.0.84"
opencv-python-headless = "^4.10.0.84"
openpyxl = "^3.1.5"
pytorch-ignite = "^0.5.1"
pytorch-lightning = "^2.4.0"
transformers = "4.46.3"
tokenizers = ">=0.20,<0.21"
numpy = ">=1.24.0,<2.0"
accelerate = ">=0.26.0"
paddleocr = "^2.9.0"
fuzzywuzzy = "^0.18.0"
easyocr = "^1.7.2"
dateparser = "^1.2.0"
paddlepaddle = "^2.6.0"
python-levenshtein = "^0.26.0"
Levenshtein = "^0.26.0"
albumentations = "^1.4.18"
pandas = "^2.2.3"
torch = "2.1.1"
torchvision = "0.16.1"
torchaudio = "2.1.1"
torchinfo = "1.8.0"
torchmetrics = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"